--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>O que você não sabia</title>
 </head>
-<body>
-    
+<body>  
+        background-color: ; 
 </body>
 </html>
