--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>O que você não sabia</title>
 </head>
 <body>  
-        background-color: ; 
+        background-color:black ; 
 </body>
 </html>
