--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>O que você não sabia</title>
 </head>
-<body>  
-        background-color:black ; 
+<body> 
+    body{ 
+        background-color:black ;} 
 </body>
 </html>
