--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>O que você não sabia</title>
 </head>
 <body> 
-    body{ 
-        background-color:black ;} 
+    <h1>"O que você não sabia!"</h1>
 </body>
 </html>
