--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>O que você não sabia</title>
 </head>
 <body> 
-    <h1>"O que você não sabia!"</h1>
+    <h1>O que você não sabia!</h1>
 </body>
 </html>
