--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>O que você não sabia</title>
 </head>
-<body> 
-    <h1>O que você não sabia!</h1>
-    <img src="canvaai.webp"> 
+<body>
+    <header>
+        <img src="canvaai.webp">
+        <ul>
+            <li>O que você não sabia! </li>
+        </ul>   
+    </header> 
 </body>
 </html>
