--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
         <img src="canvaai.webp">
         <ul>
-            <li>O que você não sabia! </li>
+            <h1>O que você não sabia! </h1>
         </ul>   
     </header> 
 </body>
