--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <img src="canvaai.webp">
+        <img src="canvaai.webp" alt="foto de panda">
         <ul>
             <h1>O que você não sabia! </h1>
         </ul>   
