--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <ul>
             <h1>O que você não sabia! </h1>
         </ul>
-        <img src="canvaai.webp" alt="foto de panda">  
+        <img src="canvaa.webp" alt="foto de panda">  
     </header> 
 </body>
 </html>
