--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>O que você não sabia</title>
 </head>
 <body style="background-color: black;">
-    <header>
+    <header style="color: azure;">
         <ul>
             <h1>O que você não sabia! </h1>
         </ul>
