--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>O que você não sabia</title>
 </head>
-<body style="background-color: black;">
+<body>
     <header style="color: azure;">
         <ul>
             <h1>O que você não sabia! </h1>
