--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <header style="color: azure;">
+    <header>
         <ul>
             <h1>O que você não sabia! </h1>
         </ul>
