--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <ul>
-            <h1>O que você não sabia! </h1>
+            <h1 class="titulo">O que você não sabia! </h1>
         </ul>
         <img src="canvai.webp" alt="foto de panda">  
     </header> 
