--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>O que você não sabia</title>
+    <title class="titulo1"><span class="troxo">que você</span> não sabia</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header>
         <ul>
-            <h1 class="titulo">O que você não sabia! </h1>
+            <h1 class="titulo2">O que você não sabia! </h1>
         </ul>
         <img src="canvai.webp" alt="foto de panda">  
     </header> 
