--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <ul>
-            <h1 class="titulo1">O <span class="troxo">que você</span> não <span class="troxo">sabia</span>! </h1>
+            <h1 class="titulo1">O <span class="tranco">que você</span> não <span class="tranco">sabia</span>! </h1>
         </ul>
         <img src="canvai.webp" alt="foto de panda">  
     </header> 
