--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <ul>
             <h1 class="titulo1">O <span class="tranco">que você</span> não <span class="tranco">sabia</span>! </h1>
         </ul>
-        <img src="canvaai.webp" alt="foto de panda">  
+        <img src="canvaai.webp" alt="joão">  
     </header> 
 </body>
 </html>
