--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <ul>
             <h1 class="titulo1">O <span class="tranco">que você</span> não <span class="tranco">sabia</span>! </h1>
-            <!-- span pode ser repedido em uma mesma linha de código -->
+            <!-- span pode ser repetido em uma mesma linha de código -->
         </ul>
         <img src="canvaai.webp" alt="joão">  
     </header> 
