--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h1 class="titulo1">O <span class="tranco">que você</span> não <span class="tranco">sabia</span>! </h1>
             <!-- span pode ser repetido em uma mesma linha de código -->
         </ul>
-        <img src="canvaai.webp" alt="joão">  
+        <img src="canvai.webp" alt="joão">  
     </header> 
 </body>
 </html>
