--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>O que você não sabia</title>
     <link rel="stylesheet" href="./style.css">
-<!--    <script src="./js.js"></script>-->
+    <script src="./js.js"></script>-->
 </head>
 <body>
+    <circle id="budego" fill="#EE4747" cx="41" cy="41" r="41"></circle>
+
     <header>
         <ul>
             <h1 class="titulo1">O <span class="tranco">que você</span> não <span class="tranco">sabia</span>! </h1>
