--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <!-- span pode ser repetido em uma mesma linha de código -->
             <p>Você sabia que o <span class="tranco">recorde</span> de voo de uma galinha é de <span class="tranco">13 segundos</span> </p>
             <p> Pois é, nesse site vamos te mostrar <span class="tranco">curiosidades</span> aleatórias de todo tipo de coisa, que talvez lhe sirva para <span class="tranco">alguma coisa</span></p>
-            <img src="./imagens/caea_ppensandoo-removebg-preview 1.png" alt="cara pensando">
+            <img class="carapen" src="./imagens/caea_ppensandoo-removebg-preview 1.png" alt="cara pensando">
         </ul>
         <img src="canvai.webp" alt="joão">  
     </header> 
