--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1 class="titulo1">O <span class="tranco">que você</span> não <span class="tranco">sabia</span>! </h1>
             <!-- span pode ser repetido em uma mesma linha de código -->
             <p class="titulo1"> <span class="tranco">Você sabia que o</span>recorde<span class="tranco"> de voo de uma galinha é de </span>13 segundos </p>
-            <p class="titulo1"> Pois é, nesse site vamos te mostrar <span class="tranco">curiosidades</span> aleatórias de todo tipo de coisa, que talvez lhe sirva para <span class="tranco">alguma coisa</span></p>
+            <p class="titulo1"> <span class="tranco"> Pois é, nesse site vamos te mostrar</span>curiosidades  <span class="tranco">aleatórias de todo tipo de coisa, que talvez lhe sirva para</span>alguma coisa</p>
             <img class="carapen" src="./imagens/caea_ppensandoo-removebg-preview 1.png" alt="cara pensando">
         </ul>
         <img src="canvai.webp" alt="joão">  
