--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
             <!-- span pode ser repetido em uma mesma linha de código -->
             <div class="primeira_parte">
                 <p class="titulo1"> <span class="tranco">Você sabia que o </span>recorde<span class="tranco"> de voo de uma galinha é de </span>13 segundos </p>
-                <p class="titulo1"> <span class="tranco"> Pois é, nesse site vamos te mostrar</span>curiosidades  <span class="tranco">aleatórias de todo tipo de coisa, que talvez lhe sirva para</span>alguma coisa</p>
+                <p class="titulo1"> <span class="tranco"> Pois é, nesse site vamos te mostrar</span>curiosidades  <span class="tranco">aleatórias de todo tipo de coisa, que talvez lhe sirva para</span>alguma coisa</p> 
+                <img class="carapen" src="./imagens/caea_ppensandoo-removebg-preview 1.png" alt="cara pensando">
             </div>
-            <img class="carapen" src="./imagens/caea_ppensandoo-removebg-preview 1.png" alt="cara pensando">
+           
         </ul>
-        <img src="canvai.webp" alt="joão">  
+        <!-- <img src="canvai.webp" alt="joão">   -->
     </header> 
 </body>
 </html>
