--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <ul>
             <h1 class="titulo1">O <span class="tranco">que você</span> não <span class="tranco">sabia</span>! </h1>
             <!-- span pode ser repetido em uma mesma linha de código -->
-            <div class="primeira_parte">
+            <div class="primeira_parte" style="position: relative; top: -8px; right: -123px;">
                 <p class="titulo1"> <span class="tranco">Você sabia que o </span>recorde<span class="tranco"> de voo de uma galinha é de </span>13 segundos </p>
-                <p class="titulo1"> <span class="tranco"> Pois é, nesse site vamos te mostrar</span>curiosidades  <span class="tranco">aleatórias de todo tipo de coisa, que talvez lhe sirva para</span>alguma coisa</p> 
-                <img class="carapen" src="./imagens/caea_ppensandoo-removebg-preview 1.png" alt="cara pensando">
+                <p class="titulo1"> <span class="tranco"> Pois é, nesse site vamos te mostrar </span>curiosidades  <span class="tranco">aleatórias de todo tipo de coisa, que talvez lhe sirva para</span>alguma coisa</p> 
             </div>
+            <img class="carapen" src="./imagens/caea_ppensandoo-removebg-preview 1.png" alt="cara pensando">
            
         </ul>
         <!-- <img src="canvai.webp" alt="joão">   -->
