--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,18 +8,23 @@
     <link rel="stylesheet" href="./style.css">
     <script src="./js.js"></script>-->
 </head>
+
 <body>
     <header>
         <ul>
             <h1 class="titulo1">O <span class="tranco">que você</span> não <span class="tranco">sabia</span>! </h1>
             <!-- span pode ser repetido em uma mesma linha de código -->
-            <div class="primeira_parte" style="position: relative; top: -8px; right: -123px;">
-                <p class="titulo1"> <span class="tranco">Você sabia que o </span>recorde<span class="tranco"> de voo de uma galinha é de </span>13 segundos </p>
-                <p class="titulo1"> <span class="tranco"> Pois é, nesse site vamos te mostrar </span>curiosidades  <span class="tranco">aleatórias de todo tipo de coisa, que talvez lhe sirva para</span>alguma coisa</p> 
+            <div class="primeira_parte" style="position: absolute; top: -8px; right: -123px;">
+                <p class="titulo2"> <span class="tranco">Você sabia que o </span>recorde<span class="tranco"> de voo de
+                        uma galinha é de </span>13 segundos </p>
+                <p class="titulo2"> <span class="tranco"> Pois é, nesse site vamos te mostrar </span>curiosidades <span
+                        class="tranco">aleatórias de todo tipo de coisa, que talvez lhe sirva para </span>alguma coisa
+                </p>
             </div>
-            <img class="carapen" src="./imagens/caea_ppensandoo-removebg-preview 1.png" alt="cara pensando">   
+            <img class="carapen" src="./imagens/caea_ppensandoo-removebg-preview 1.png" alt="cara pensando" style="size: 60%; position:absolute;">
         </ul>
         <!-- <img src="canvai.webp" alt="joão">   -->
-    </header> 
+    </header>
 </body>
+
 </html>
