--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <ul>
             <h1 class="titulo1">O <span class="tranco">que você</span> não <span class="tranco">sabia</span>! </h1>
             <!-- span pode ser repetido em uma mesma linha de código -->
-            <div class="primeira_parte" style="position: absolute; top: -8px; right: -123px;">
+            <div class="primeira_parte" style="position: absolute; top: -8px; right: -123px;font-size:larger ;">
                 <p class="titulo2"> <span class="tranco">Você sabia que o </span>recorde<span class="tranco"> de voo de
                         uma galinha é de </span>13 segundos </p>
                 <p class="titulo2"> <span class="tranco"> Pois é, nesse site vamos te mostrar </span>curiosidades <span
