--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         <ul>
             <h1 class="titulo1">O <span class="tranco">que você</span> não <span class="tranco">sabia</span>! </h1>
             <!-- span pode ser repetido em uma mesma linha de código -->
-            <div class="primeira_parte" style="position: absolute; top: -8px; right: -123px;font-size:larger ;">
+            <div class="primeira_parte" style="position: relative; top: 52px; right: -204px;font-size:x-large ;">
                 <p class="titulo2"> <span class="tranco">Você sabia que o </span>recorde<span class="tranco"> de voo de
                         uma galinha é de </span>13 segundos </p>
                 <p class="titulo2"> <span class="tranco"> Pois é, nesse site vamos te mostrar </span>curiosidades <span
                         class="tranco">aleatórias de todo tipo de coisa, que talvez lhe sirva para </span>alguma coisa
                 </p>
             </div>
-            <img class="carapen" src="./imagens/caea_ppensandoo-removebg-preview 1.png" alt="cara pensando" style="size: 60%; position:absolute;">
+            <img class="carapen" src="./imagens/caea_ppensandoo-removebg-preview 1.png" alt="cara pensando" style="height: 60%;height:60% ; position:relative;">
         </ul>
         <!-- <img src="canvai.webp" alt="joão">   -->
     </header>
