--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>O que você não sabia</title>
     <link rel="stylesheet" href="./style.css">
-    <script src="./js.js"></script>-->
+    <script src="./js.js"></script>
 </head>
 
 <body>
     <header>
         <ul>
-            <h1 class="titulo1">O <span class="tranco">que você</span> não <span class="tranco">sabia</span>! </h1>
+            <h1 class="titulo1" style="font-size: xxx-large;">O <span class="tranco">que você</span> não <span class="tranco">sabia</span>! </h1>
             <!-- span pode ser repetido em uma mesma linha de código -->
             <div class="primeira_parte" style="position: relative; top: 52px; right: -204px;font-size:x-large ;">
                 <p class="titulo2"> <span class="tranco">Você sabia que o </span>recorde<span class="tranco"> de voo de
