--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <ul>
             <h1 class="titulo1" style="font-size: xxx-large;">O <span class="tranco">que você</span> não <span class="tranco">sabia</span>! </h1>
             <!-- span pode ser repetido em uma mesma linha de código -->
+        <div class="box" style="">    
             <div class="primeira_parte" style="position: relative; top: 52px; right: -204px;font-size:x-large ;">
                 <p class="titulo2"> <span class="tranco">Você sabia que o </span>recorde<span class="tranco"> de voo de
                         uma galinha é de </span>13 segundos </p>
@@ -21,7 +22,8 @@
                         class="tranco">aleatórias de todo tipo de coisa, que talvez lhe sirva para </span>alguma coisa
                 </p>
             </div>
-            <img class="carapen" src="./imagens/caea_ppensandoo-removebg-preview 1.png" alt="cara pensando" style="height: 60%;height:60% ; position:relative;">
+            <img class="carapen" src="./imagens/caea_ppensandoo-removebg-preview 1.png" alt="cara pensando" style="height: 60%;position:relative;">
+        </div>
         </ul>
         <!-- <img src="canvai.webp" alt="joão">   -->
     </header>
