--- a/index.html
+++ b/index.html
@@ -12,18 +12,23 @@
 <body>
     <header>
         <ul>
-            <h1 class="titulo1" style="font-size: xxx-large;">O <span class="tranco">que você</span> não <span class="tranco">sabia</span>! </h1>
+            <h1 class="titulo1" style="font-size: xxx-large;">O <span class="tranco">que você</span> não <span
+                    class="tranco">sabia</span>! </h1>
             <!-- span pode ser repetido em uma mesma linha de código -->
-        <div class="box" style="">    
-            <div class="primeira_parte" style="position: relative; top: 52px; right: -204px;font-size:x-large ;">
-                <p class="titulo2"> <span class="tranco">Você sabia que o </span>recorde<span class="tranco"> de voo de
-                        uma galinha é de </span>13 segundos </p>
-                <p class="titulo2"> <span class="tranco"> Pois é, nesse site vamos te mostrar </span>curiosidades <span
-                        class="tranco">aleatórias de todo tipo de coisa, que talvez lhe sirva para </span>alguma coisa
-                </p>
+            <div class="box" style="">
+                <div class="primeira_parte"
+                    style="position: relative;top: 56px;right:  -452px;font-size: xx-large;border:0px; height: fit-content;width: 426px;padding: 0px;border: 0px;">
+                    <p class="titulo2"> <span class="tranco">Você sabia que o </span>recorde<span class="tranco"> de voo
+                            de
+                            uma galinha é de </span>13 segundos </p>
+                    <p class="titulo2"> <span class="tranco"> Pois é, nesse site vamos te mostrar </span>curiosidades
+                        <span class="tranco">aleatórias de todo tipo de coisa, que talvez lhe sirva para </span>alguma
+                        coisa
+                    </p>
+                </div>
+                <img class="carapen" src="./imagens/caea_ppensandoo-removebg-preview 1.png" alt="cara pensando"
+                    style="position:relative;left: 993px;top: -257px;height: 311px;">
             </div>
-            <img class="carapen" src="./imagens/caea_ppensandoo-removebg-preview 1.png" alt="cara pensando" style="height: 60%;position:relative;">
-        </div>
         </ul>
         <!-- <img src="canvai.webp" alt="joão">   -->
     </header>
