--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
                     class="tranco">sabia</span>! </h1>
             <!-- span pode ser repetido em uma mesma linha de código -->
             <div class="box" style="">
-                <div class="primeira_parte"
-                    style="position: relative;top: 56px;right:  -452px;font-size: xx-large;border:0px; height: fit-content;width: 426px;padding: 0px;border: 0px;">
+                <div class="primeira_parte">
                     <p class="titulo2"> <span class="tranco">Você sabia que o </span>recorde<span class="tranco"> de voo
                             de
                             uma galinha é de </span>13 segundos </p>
@@ -26,8 +25,7 @@
                         coisa
                     </p>
                 </div>
-                <img class="carapen" src="./imagens/caea_ppensandoo-removebg-preview 1.png" alt="cara pensando"
-                    style="position:relative;left: 993px;top: -257px;height: 311px;">
+                <img class="carapens" src="./imagens/caea_ppensandoo-removebg-preview 1.png" alt="cara pensando">
             </div>
         </ul>
         <!-- <img src="canvai.webp" alt="joão">   -->
