--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
                         <span class="tranco">aleatórias de todo tipo de coisa, que talvez lhe sirva para </span>alguma
                         coisa
                     </p>
+                <div class="troco">   
+                    <p><span class="tranco">Role o</span> site<span class="tranco"> para baixo e </span>se divirta</p>
+                </div>
                 </div>
                 <img class="carapens" src="./imagens/caea_ppensandoo-removebg-preview 1.png" alt="cara pensando">
             </div>
