--- a/index.html
+++ b/index.html
@@ -22,16 +22,18 @@
                             uma galinha é de </span>13 segundos </p>
                     <p class="titulo2"> <span class="tranco"> Pois é, nesse site vamos te mostrar </span>curiosidades
                         <span class="tranco">aleatórias de todo tipo de coisa, que talvez lhe sirva para </span>alguma
-                        coisa
-                    </p>
-                <div class="troco">   
-                    <p><span class="tranco">Role o</span> site<span class="tranco"> para baixo e </span>se divirta</p>
-                </div>
+                        coisa</p>
+                    <div class="troco">
+                        <p><span class="tranco">Role o</span> site<span class="tranco"> para baixo e </span>se divirta
+                        </p>
+                    </div>
+                    <div>
+                        <img src="./imagens/canvaai.webp" alt="aaaaa">
+                    </div>
                 </div>
                 <img class="carapens" src="./imagens/caea_ppensandoo-removebg-preview 1.png" alt="cara pensando">
             </div>
         </ul>
-        <!-- <img src="canvai.webp" alt="joão">   -->
     </header>
 </body>
 
