--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                         <span class="tranco">aleatórias de todo tipo de coisa, que talvez lhe sirva para </span>alguma
                         coisa</p>
                     <div class="troco">
-                        <p><span class="tranco">Role o</span> site<span class="tranco"> para baixo e </span>se divirta
-                        </p>
+                        <p class="titulo2"><span class="tranco">Role o</span> site<span class="tranco"> para baixo e </span>se divirta
+                        <span class="tranco">:)</span></p>
                     </div>
                     <div>
                         <img src="./imagens/canvaai.webp" alt="aaaaa">
