--- a/index.html
+++ b/index.html
@@ -17,19 +17,18 @@
             <!-- span pode ser repetido em uma mesma linha de código -->
             <div class="box" style="">
                 <div class="primeira_parte">
-                    <p class="titulo2"> <span class="tranco">Você sabia que o </span>recorde<span class="tranco"> de voo
-                            de
-                            uma galinha é de </span>13 segundos </p>
-                    <p class="titulo2"> <span class="tranco"> Pois é, nesse site vamos te mostrar </span>curiosidades
-                        <span class="tranco">aleatórias de todo tipo de coisa, que talvez lhe sirva para </span>alguma
-                        coisa</p>
+                        <div class="flecha2">
+                            <img src="./imagens/Arrow 2.png" alt="flecha">
+                        </div>
+                    <p class="titulo2"> <span class="tranco">Você sabia que o </span>recorde<span class="tranco"> de voo de uma galinha é de </span>13 segundos </p>          
+                    <p class="titulo2"> <span class="tranco"> Pois é, nesse site vamos te mostrar </span>curiosidades <span class="tranco">aleatórias de todo tipo de coisa, que talvez lhe sirva para </span>alguma coisa</p>
+                        <div class="felcha1">
+                            <img src="./imagens/Arrow 1.png" alt="flecha">
+                        </div>
                     <div class="troco">
                         <p class="titulo2"><span class="tranco">Role o</span> site<span class="tranco"> para baixo e </span>se divirta
                         <span class="tranco">:)</span></p>
                         <img class="carapens" src="./imagens/caea_ppensandoo-removebg-preview 1.png" alt="cara pensando">
-                    </div>
-                    <div>
-                        
                     </div>
                 </div>
                 
