--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <span class="tranco">:)</span></p>
                         <img class="carapens" src="./imagens/caea_ppensandoo-removebg-preview 1.png" alt="cara pensando">
                     </div>
-                        <div class="felcha1">
+                        <div class="flecha1">
                             <img src="./imagens/Arrow 1.png" alt="flecha">
                         </div>
                 </div>
