--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>O que você não sabia</title>
     <link rel="stylesheet" href="./style.css">
     <script src="./js.js"></script>
+    <style>::-webkit-scrollbar{
+        width: 1px;
+      }
+      ::-webkit-scrollbar-thumb:hover{
+        background: var(--corfund);
+      }
+    </style> 
 </head>
 
 <body>
