--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         width: 10px;
       }
       ::-webkit-scrollbar-thumb:hover{
-        background: var(--corfund);
+        background:#3c3044;
       }
     </style> 
 </head>
