--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
       ::-webkit-scrollbar-thumb:hover{
         background:#3c3044;
       }
+      ::-webkit-scrollbar-track {
+       background: #3c3044; 
+      }
+      ::-webkit-scrollbar-thumb {
+       background: #3c3044; 
+      }
     </style> 
 </head>
 
