--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         background:#3c3044;
       }
       ::-webkit-scrollbar-track {
-       background: #3c3044; 
+       background: var(--corfund); 
       }
       ::-webkit-scrollbar-thumb {
        background: #3c3044; 
