--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
       ::-webkit-scrollbar-thumb {
        background: #3c3044; 
       }
+      ::selection{
+        color: var(--branco);
+        background: white;
+      }
     </style> 
 </head>
 
