--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         background:#3c3044;
       }
       ::-webkit-scrollbar-track {
-       background: var(--corfund); 
+       background: #23202500; 
       }
       ::-webkit-scrollbar-thumb {
        background: #3c3044; 
       }
       ::selection{
         color: var(--branco);
-        background: white;
+        background: #3c3044;
       }
     </style> 
 </head>
