--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
                         </div>
                     <div class="cur1">
                         <img src="./imagens/esqueleto-removebg-preview 1.png" alt="esqueleto" class="cur1img">
-                        <p>O <span class="higli">esqueleto humano</span> é formado por <span class="higli">206 ossos</span> . Apesar disso, os <span class="higli">bebês nascem</span> com cerca de<span class="higli">270 ossos</span>. Eles vão se fundindo <span class="higli">com</span> ossos maiores </p>
+                        <div class="txtcur1"><p>O <span class="higli">esqueleto humano</span> é formado por <span class="higli">206 ossos</span> . Apesar disso, os <span class="higli">bebês nascem</span> com cerca de<span class="higli">270 ossos</span>. Eles vão se fundindo <span class="higli">com</span> ossos maiores </p>
+                        </div>
                     </div>
                 </div>
                 
