--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
     <header>
         <ul>
-            <h1 class="titulo1" style="font-size: xxx-large;">O <span class="tranco">que você</span> não <span
+            <h1 class="titulo1"><span class="tranco">O que você</span> não <span
                     class="tranco">sabia</span>! </h1>
             <!-- span pode ser repetido em uma mesma linha de código -->
             <div class="box" style="">
