--- a/index.html
+++ b/index.html
@@ -29,18 +29,11 @@
 <body>
     <header>
         <ul>
-          
-           
-            <div class="box" > 
-                 <h1 class="titulo1"><span class="tranco">O que você</span> não <span
-                    class="tranco">sabia</span>!
-                 </h1>
+            <h1 class="titulo1" style="font-size: xxx-large;"><span class="tranco">O que você</span> não <span
+                    class="tranco">sabia</span>! </h1>
+            <!-- span pode ser repetido em uma mesma linha de código -->
+            <div class="box" style="">
                 <div class="primeira_parte">
-                    <div>
-                        <p class="titulo1"><span class="tranco">O que você</span> não <span
-                            class="tranco">sabia</span>!
-                        </p>
-                    </div>
                         <div class="flecha2">
                             <img src="./imagens/Arrow 2.png" alt="flecha">
                         </div>
