--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
 <body>
     <header>
         <ul>
-            <h1 class="titulo1" style="font-size: xxx-large;"><span class="tranco">O que você</span> não <span
+                <div class="titulo">
+                    <h1 class="titulo1"><span class="tranco">O que você</span> não <span
                     class="tranco">sabia</span>! </h1>
-            <!-- span pode ser repetido em uma mesma linha de código -->
+                <!-- span pode ser repetido em uma mesma linha de código -->
+                </div>
             <div class="box" style="">
                 <div class="primeira_parte">
                         <div class="flecha2">
