--- a/index.html
+++ b/index.html
@@ -51,8 +51,14 @@
                             <img src="./imagens/Arrow 1.png" alt="flecha">
                         </div>
                     <div class="cur1">
+                            <div class="cur1frtp">
+                                <img src="./imagens/frame.top.left.png" alt="frame">
+                            </div>
                         <img src="./imagens/esqueleto-removebg-preview 1.png" alt="esqueleto" class="cur1img">
                         <div class="txtcur1"><p>O <span class="higli">esqueleto humano</span> é formado por <span class="higli">206 ossos</span> . Apesar disso, os <span class="higli">bebês nascem</span> com cerca de <span class="higli">270 ossos</span>. Eles vão se fundindo <span class="higli">com</span> ossos maiores </p>
+                            <div class="cur1frbt">
+                                <img src="./imagens/frame.bottom.right.png" alt="frame">
+                            </div>
                         </div>
                     </div>
                 </div>
