--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <div class="flecha2">
                             <img src="./imagens/Arrow 2.png" alt="flecha">
                         </div>
-                    <p class="titulo2"> <span class="tranco">Você sabia que o </span>recorde<span class="tranco"> de voo de uma galinha é de </span>13 segundos </p>          
+                    <p class="titulo2"> <span class="tranco">Você sabia que o </span>recorde<span class="tranco"> de voo de uma <span class="tranco">galinha</span> é de </span>13 segundos </p>          
                     <p class="titulo2"> <span class="tranco"> Pois é, nesse site vamos te mostrar </span>curiosidades <span class="tranco">aleatórias de todo tipo de coisa, que talvez lhe sirva para </span>alguma coisa</p>
                     
                     <div class="troco">
@@ -55,7 +55,8 @@
                                 <img src="./imagens/frame.top.left.png" alt="frame" class="cur1frtp">
                             <!-- </div> -->
                         <img src="./imagens/esqueleto-removebg-preview 1.png" alt="esqueleto" class="cur1img">
-                        <div class="txtcur1"><p>O <span class="higli">esqueleto humano</span> é formado por <span class="higli">206 ossos</span> . Apesar disso, os <span class="higli">bebês nascem</span> com cerca de <span class="higli">270 ossos</span>. Eles vão se fundindo <span class="higli">com</span> ossos maiores </p>
+                        <div class="txtcur1">
+                            <p>O <span class="higli">esqueleto humano</span> é formado por <span class="higli">206 ossos</span> . Apesar disso, os <span class="higli">bebês nascem</span> com cerca de <span class="higli">270 ossos</span>. Eles vão se fundindo <span class="higli">com ossos maiores </span></p>
                             <!-- <div class="cur1frbt"> -->
                                 <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur1frbt">
                             <!-- </div> -->
