--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         /* Style the header */
         header {
-            background-color: #66666613;
+            background-color: rgba(100, 100, 100, 0);
             padding: 30px;
             text-align: center;
             font-size: 35px;
@@ -49,7 +49,7 @@
             width: 15%;
             height: 1px;
             /*only for demonstration, should be removed*/
-            background: #cccccc28;
+            background: #cccccc00;
             padding: 0px;
             /* width: 250px; */
         }
@@ -64,7 +64,7 @@
             float: left;
             padding: 20px;
             width: 70%;
-            background-color: #f1f1f110;
+            background-color: #f1f1f100;
             /* height: 300px; only for demonstration, should be removed */
         }
 
@@ -77,7 +77,7 @@
 
         /* Style the footer */
         footer {
-            background-color: #77777711;
+            background-color: #77777700;
             padding: 10px;
             text-align: center;
             color: rgba(255, 255, 255, 0.034);
