--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <nav></nav>
 <article>
         <img class="flecha1" src="./imagens/Arrow 2.png" alt="flecha">
-    <div class="curiosidades">
+    <div class="descsite">
         <div class="textini">
 
         <p class="titulo2">Você sabia que o <span class="highroxo">recorde </span>de voo de uma
@@ -118,20 +118,16 @@
         <img class="cpen" src="./imagens/cara_ppensandoo-removebg-preview 1.png" alt="cara pensando">
         <img class="flecha2" src="./imagens/Arrow 1.png" alt="flecha">
         </div>
-    <div>   
-        <img class="flecha1" src="./imagens/Arrow 2.png" alt="flecha">
-        <div class="textini">
+    <div class="curiosidade1">   
+        <img class="frtp" src="./imagens/frame.top.left.png" alt="frame">
+            <div class="textini">
 
-        <p class="titulo2">Você sabia que o <span class="highroxo">recorde </span>de voo de uma
-            <span class="highroxo">galinha</span> é de<span class="highroxo"> 13 segundos</span>.
-        </p>
-        <p class="titulo2">Pois é, nesse site vamos te mostrar <span class="highroxo">curiosidades </span>aleatórias de
-            todo tipo de coisa, que talvez lhe sirva para <span class="highroxo">
-                alguma coisa</span>.</p>
-
-        </div>
+                <p class="titulo2">O esqueleto humano é formado por <span class="higli">206 ossos </span>. Apesar disso, os
+                    <span class="highroxo">bebês</span> nascem com cerca de <span class="higli"> 270 ossos</span>. Eles vão se<span class="higli"> fundindo</span> com ossos maiores.
+                </p>
+            </div>
         <img class="cpen" src="./imagens/cara_ppensandoo-removebg-preview 1.png" alt="cara pensando">
-        <img class="flecha2" src="./imagens/Arrow 1.png" alt="flecha">
+        <img class="frbot" src="./imagens/frame.bottom.right.png" alt="frame">
     </div>
 </article>
 <nav></nav>
