--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
         <img class="frtp" src="./imagens/frame.top.left.png" alt="frame">
             <div class="textini">
 
-                <p class="titulo2">O esqueleto humano é formado por <span class="higli">206 ossos </span>. Apesar disso, os
-                    <span class="highroxo">bebês</span> nascem com cerca de <span class="higli"> 270 ossos</span>. Eles vão se<span class="higli"> fundindo</span> com ossos maiores.
+                <p class="titulo2">O <span class="higli">esqueleto humano </span>é formado por <span class="higli">206 ossos </span>. Apesar disso, os
+                    <span class="higli">bebês</span> nascem com cerca de <span class="higli"> 270 ossos</span>. Eles vão se<span class="higli"> fundindo</span> com ossos maiores.
                 </p>
             </div>
         <img class="cpen" src="./imagens/cara_ppensandoo-removebg-preview 1.png" alt="cara pensando">
