--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     <span class="higli">bebês</span> nascem com cerca de <span class="higli"> 270 ossos</span>. Eles vão se<span class="higli"> fundindo</span> com ossos maiores.
                 </p>
             </div>
-        <img class="cpen" src="./imagens/cara_ppensandoo-removebg-preview 1.png" alt="cara pensando">
+        <img class="cpen" src="./imagens/esqueleto-removebg-preview 1.png" alt="essqueloto">
         <img class="frbot" src="./imagens/frame.bottom.right.png" alt="frame">
     </div>
 </article>
