--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
             color: var(--branco);
             background: #3c3044;
         }
+        @font-face {
+    	font-family: "bangers";
+    	src: url("./Bangers-Regular.woff2") format("woff2");
+        }
     </style>
 </head>
 
