--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
         @font-face {
     	font-family: "bangers";
     	src: url("./Bangers-Regular.woff2") format("woff2");
+        
+        }
+        @font-face {
+            font-family: "bentham";
+            src: url("./Bentham-Regular.ttf") format("ttf");
         }
     </style>
 </head>
