--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="pt-br">
 
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bentham&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>O que você não sabia</title>
@@ -28,6 +31,8 @@
             color: var(--branco);
             background: #3c3044;
         }
+
+        
     </style>
 </head>
 
