agora sim devolta ao normal

--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bentham&display=swap" rel="stylesheet"> -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>O que você não sabia</title>
@@ -14,22 +10,27 @@
         ::-webkit-scrollbar {
             width: 10px;
         }
-
         ::-webkit-scrollbar-thumb:hover {
             background: #3c3044;
         }
-
         ::-webkit-scrollbar-track {
             background: #23202500;
         }
-
         ::-webkit-scrollbar-thumb {
             background: #3c3044;
         }
-
         ::selection {
             color: var(--branco);
             background: #3c3044;
+        }
+        @font-face {
+    	font-family: "bangers";
+    	src: url("./Bangers-Regular.woff2") format("woff2");
+
+        }
+        @font-face {
+            font-family: "bentham";
+            src: url("./Bentham-Regular.ttf") format("ttf");
         }
     </style>
 </head>
@@ -37,48 +38,48 @@
 <body>
     <header>
         <ul>
-            <div class="titulo">
+            <div class="titulo"> 
                 <img src="./imagens/Arrow 2.png" alt="flecha" class="flecha1">
                 <h1 class="titulo1"><span class="tranco">O que você</span> não <span class="tranco">sabia</span>! </h1>
                 <!-- span pode ser repetido em uma mesma linha de código -->
             </div>
-            <div class="primeira_parte">
-                <p class="titulo2"> <span class="tranco">Você sabia que o </span>recorde<span class="tranco"> de voo
-                        de uma <span class="tranco">galinha</span> é de </span>13 segundos </p>
-                <p class="titulo2"> <span class="tranco"> Pois é, nesse site vamos te mostrar </span>curiosidades
-                    <span class="tranco">aleatórias de todo tipo de coisa, que talvez lhe sirva para </span>alguma
-                    coisa
-                </p>
-
-            </div>
-            <div class="troco">
-                <p class="titulo2"><span class="tranco">Role o</span> site<span class="tranco"> para baixo e
-                    </span>se divirta
-                    <span class="tranco">:)</span>
-                </p>
-                <img class="carapens" src="./imagens/caea_ppensandoo-removebg-preview 1.png" alt="cara pensando">
-            </div>
-            <img src="./imagens/Arrow 1.png" alt="flecha" class="flecha1">
-
-
-
-            <div class="cur1">
-                <img src="./imagens/frame.top.left.png" alt="frame" class="cur1frtp">
-                <img src="./imagens/esqueleto-removebg-preview 1.png" alt="esqueleto" class="cur1img">
-                <div class="txtcur1">
-                    <p>O <span class="higli">esqueleto humano</span> é formado por <span class="higli">206
-                            ossos</span> . Apesar disso, os <span class="higli">bebês nascem</span> com cerca de
-                        <span class="higli">270 ossos</span>. Eles vão se fundindo <span class="higli">com ossos
-                            maiores </span>
-                    </p>
-                    <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur1frbt">
+            <div class="box" style="">
+                <div class="primeira_parte">
+                   
+                    <p class="titulo2"> <span class="tranco">Você sabia que o </span>recorde<span class="tranco"> de voo
+                            de uma <span class="tranco">galinha</span> é de </span>13 segundos </p>
+                    <p class="titulo2"> <span class="tranco"> Pois é, nesse site vamos te mostrar </span>curiosidades
+                        <span class="tranco">aleatórias de todo tipo de coisa, que talvez lhe sirva para </span>alguma
+                        coisa</p>
+                    <div class="troco">
+                        <p class="titulo2"><span class="tranco">Role o</span> site<span class="tranco"> para baixo e
+                            </span>se divirta
+                            <span class="tranco">:)</span>
+                        </p>
+                        <img class="carapens" src="./imagens/caea_ppensandoo-removebg-preview 1.png"
+                            alt="cara pensando">
+                    </div>
+                    <div class="flecha1">
+                        <img src="./imagens/Arrow 1.png" alt="flecha">
+                    </div>
+                    <div class="cur1">
+                        <!-- <div class="cur1frtp"> -->
+                        <img src="./imagens/frame.top.left.png" alt="frame" class="cur1frtp">
+                        <!-- </div> -->
+                        <img src="./imagens/esqueleto-removebg-preview 1.png" alt="esqueleto" class="cur1img">
+                        <div class="txtcur1">
+                            <p>O <span class="higli">esqueleto humano</span> é formado por <span class="higli">206
+                                    ossos</span> . Apesar disso, os <span class="higli">bebês nascem</span> com cerca de
+                                <span class="higli">270 ossos</span>. Eles vão se fundindo <span class="higli">com ossos
+                                    maiores </span></p>
+                            <!-- <div class="cur1frbt"> -->
+                            <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur1frbt">
+                            <!-- </div> -->
+                        </div>
+                    </div>
                 </div>
             </div>
-
-
-
         </ul>
     </header>
 </body>
-
 </html>
