--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         }
         @font-face {
             font-family: "bentham";
-            src: url("./Bentham-Regular.ttf") format("ttf");
+            src: url("./Bentham-Regular.ttf") format("truetype");
         }
     </style>
 </head>
