--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <ul>
             <div class="titulo"> 
                 <img src="./imagens/Arrow 2.png" alt="flecha" class="flecha1">
-                <h1 class="titulo1"><span class="tranco">O que você</span> não <span class="tranco">sabia</span>! </h1>
+                <h1 class="titulo1">O<span class="tranco"> que você</span> não <span class="tranco">sabia</span>! </h1>
                 <!-- span pode ser repetido em uma mesma linha de código -->
             </div>
             <div class="box" style="">
