--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="primeira_parte">
                    
                     <p class="titulo2"> <span class="tranco">Você sabia que o </span>recorde<span class="tranco"> de voo
-                        de uma <span class="tranco">galinha é de </span>13 segundos?
+                        de uma galinha é de </span> 13 segundos?
                         <span class="tranco"> Pois é, nesse site vamos te mostrar </span>curiosidades
                         <span class="tranco">aleatórias de todo tipo de coisa, que talvez lhe sirva para </span>alguma
                         coisa.</p> 
