--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <p class="titulo2"> <span class="tranco">Você sabia que o </span>recorde<span class="tranco"> de voo
                         de uma galinha é de </span> 13 segundos?
                         <span class="tranco"> Pois é, nesse site vamos te mostrar </span>curiosidades
-                        <span class="tranco">aleatórias de todo tipo de coisa, que talvez lhe sirva para </span>alguma
+                        aleatórias <span class="tranco"> de todo tipo de coisa, que talvez lhe sirva para </span>alguma
                         coisa.</p> 
                     <div class="troco">
                         <p class="titulo2"><span class="tranco">Role o</span> site<span class="tranco"> para baixo e
