--- a/index.html
+++ b/index.html
@@ -48,9 +48,8 @@
                    
                     <p class="titulo2"> <span class="tranco">Você sabia que o </span>recorde<span class="tranco"> de voo
                     de uma galinha é de </span> 13 segundos? </p>
-                    <p class="titulo2"> <span class="tranco"> Pois é, nesse site vamos te mostrar </span>curiosidades
-                    aleatórias <span class="tranco"> de todo tipo de coisa, que talvez lhe sirva para </span>alguma
-                    coisa.</p> 
+                    <p class="titulo2"> <span class="tranco"> Pois é, nesse site vamos te mostrar </span>curiosidades aleatórias 
+                    <span class="tranco"> de todo tipo de coisa, que talvez lhe sirva para </span>alguma coisa.</p> 
                     <div class="troco">
                         <p class="titulo2"><span class="tranco">Role o</span> site<span class="tranco"> para baixo e
                             </span>se divirta
