--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <h1 class="titulo1">O<span class="tranco"> que você</span> não <span class="tranco">sabia</span>! </h1>
                 <!-- span pode ser repetido em uma mesma linha de código -->
             </div>
-            <div class="box" style="">
+            <div class="box">
                 <div class="primeira_parte">
                    
                     <p class="titulo2"> <span class="tranco">Você sabia que o </span>recorde<span class="tranco"> de voo
